[package]
name = "macro9"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = "0.2"
embedded-time = "0.12"
panic-halt = "0.2"
rp-pico = "0.5"
usbd-hid = "0.6.0"
usb-device = "0.2"
critical-section = "1.1.1"